--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Archivio Personale del Bugliò</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+    if (window.innerWidth < 768) { // Cambia 768 con la larghezza desiderata per i dispositivi mobili
+        window.location.href = 'mobile.html'; // Cambia 'pagina_mobile.html' con l'URL della tua pagina per dispositivi mobili
+    }
+</script>
 </head>
 <body>
     <div class="container">
