--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>Archivio Personale del Bugliò</title>
     <link rel="stylesheet" href="style.css">
     <script>
-    if (window.innerWidth < 768) { // Cambia 768 con la larghezza desiderata per i dispositivi mobili
-        window.location.href = 'mobile.html'; // Cambia 'pagina_mobile.html' con l'URL della tua pagina per dispositivi mobili
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        window.location.href = 'mobile.html';
     }
 </script>
+
 </head>
 <body>
     <div class="container">
