--- a/mobile.html
+++ b/mobile.html
@@ -13,4 +13,7 @@
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
         <h1 class="fade-in-up">Disponibile a breve anche per Mobile</h1>
         <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
-        <img src="wip.png" alt="Lavori in corso" class="header-image fade-in-up"
+        <img src="wip.png" alt="Lavori in corso" class="header-image fade-in-up">
+    </div>
+    </body>
+</html>
