--- a/mobile.html
+++ b/mobile.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Buglio Personal Archive" class="picandroid">
+        <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
         <h1 class="fade-in-up">Disponibile a breve anche per Mobile</h1>
         <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
-        <img src="wip.png" alt="Lavori in corso" class="picandroid">
+        <img src="wip.png" alt="Lavori in corso" class="header-image fade-in-up">
     </div>
     </body>
 </html>
