--- a/mobile.html
+++ b/mobile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div>
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
         <h1 class="fade-in-up">Disponibile a breve anche per Mobile</h1>
         <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
