--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Archivio Personale del Bugliò</title>
     <link rel="stylesheet" href="style.css">
     <script>
-
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+        window.location.href = 'mobile.html';
+    }
 </script>
 
 </head>
 <body>
-    <div>
+    <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
         <h1 class="fade-in-up">Benvenuto nell'archivio personale del Bugliò</h1>
         <p class="fade-in-up">Una collezione di tool essenziali accuratamente selezionati.</p>
