--- a/mobile.html
+++ b/mobile.html
@@ -11,8 +11,8 @@
 <body>
     <div>
         <img src="logo.png" alt="Buglio Personal Archive" class="picandroid fade-in-up">
-        <h1 class="fade-in-up">Disponibile a breve anche per Mobile</h1>
-        <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
+        <h1 class="fade-in-up">Disponibile a breve anche per mobile</h1>
+        <i class="fade-in-up">Al momento il sito non è disponibile per mobile. WIP</i>
         <img src="wip.png" alt="Lavori in corso" class="picandroid fade-in-up">
     </div>
     </body>
