--- a/mobile.html
+++ b/mobile.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <img src="logo.png" alt="Buglio Personal Archive" class="picandroid fade-in-up">
+    <div class="container">
+        <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
         <h1 class="fade-in-up">Disponibile a breve anche per mobile</h1>
-        <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
-        <img src="wip.png" alt="Lavori in corso" class="picandroid fade-in-up">
+        <p class="fade-in-up">Al momento il sito non è disponibile per mobile. WIP</p>
+        <img src="wip.png" alt="Lavori in corso">
     </div>
     </body>
 </html>
