--- a/mobile.html
+++ b/mobile.html
@@ -6,14 +6,14 @@
     <meta name="description" content="Archivio personale del Bugliò">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Archivio Personale del Bugliò</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="android.css">
 </head>
 <body>
     <div class="container">
-        <img src="logo.png" alt="Buglio Personal Archive" class="header-image fade-in-up">
-        <h1 class="fade-in-up">Disponibile a breve anche per Mobile</h1>
-        <p class="fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
-        <img src="wip.png" alt="Lavori in corso">
+        <img src="logo.png" alt="Buglio Personal Archive" class="container fade-in-up">
+        <h1 class=" container fade-in-up">Disponibile a breve anche per Mobile</h1>
+        <p class="container fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
+        <img src="wip.png" alt="Lavori in corso" class="header-image">
     </div>
     </body>
 </html>
