--- a/mobile.html
+++ b/mobile.html
@@ -13,7 +13,7 @@
         <img src="logo.png" alt="Buglio Personal Archive" class="container fade-in-up">
         <h1 class=" container fade-in-up">Disponibile a breve anche per Mobile</h1>
         <p class="container fade-in-up">Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
-        <img src="wip.png" alt="Lavori in corso" class="header-image">
+        <img src="wip.png" alt="Lavori in corso" class="container fade-in-up">
     </div>
     </body>
 </html>
