--- a/mobile.html
+++ b/mobile.html
@@ -15,12 +15,12 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f8f8f8;
+            background-color: #000;
         }
         .container {
             text-align: center;
             padding: 20px;
-            background-color: #fff;
+            background-color: #000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
@@ -29,11 +29,11 @@
             height: auto;
         }
         h1 {
-            color: #333;
+            color: #FFF;
             font-size: 1.5em;
         }
         p {
-            color: #666;
+            color: #FFF;
             font-size: 1em;
         }
         @media (max-width: 600px) {
