--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,7 @@
     <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image">
         <h1>Disponibile a breve anche per Mobile</h1>
-        <p>Al momento il sito non è disponibile per mobile. Ci stiamo lavorando</p>
+        <p>Sito non ancora disponibile per mobile. WIP</p>
         <img src="wip.png" alt="Lavori in corso" class="header-image">
     </div>
 </body>
