--- a/mobile.html
+++ b/mobile.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Archivio Personale del Bugliò</title>
 </head>
-<body>
+<body style="background-color:#000;">>
     <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image">
         <h1>Disponibile a breve anche per Mobile</h1>
