--- a/mobile.html
+++ b/mobile.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Archivio personale del Bugliò">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Archivio Personale del Bugliò</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color:#000;">>
+<body>
     <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image">
         <h1>Disponibile a breve anche per Mobile</h1>
