--- a/mobile.html
+++ b/mobile.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Archivio personale del Bugliò">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>Archivio Personale del Bugliò</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="android.css">
 </head>
 <body>
     <div class="container">
