--- a/mobile.html
+++ b/mobile.html
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image">
-        <h1>Disponibile a breve anche per Mobile</h1>
-        <p>Sito non ancora disponibile per mobile. WIP</p>
-        <img src="wip.png" alt="Lavori in corso" class="header-image">
+        <h1>Archivio a breve disponbile anche per mobile.</h1>
+        <p>Let me cook</p>
+        <img src="cook.gif" alt="Let me cook" class="header-image">
     </div>
 </body>
 </html>
