--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,8 @@
 <body>
     <div class="container">
         <img src="logo.png" alt="Buglio Personal Archive" class="header-image">
-        <h1>Archivio a breve disponbile anche per mobile.</h1>
+        <h1>Archivio a breve disponibile anche per mobile.</h1>
+        <i>Attualmente disponibile solo per computer</i>
         <br>
         <img src="cook.gif" alt="Let me cook" class="header-image">
     </div>
